--- a/Inedx.css
+++ b/Inedx.css
@@ -3,21 +3,57 @@
     src: url(sora.ttf);
 }
 *{
-    /* margin: 0 15px;  */
+   
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: myFont;
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    
 }
 html{
-    margin: 0 60px;
+    margin: 0 5vw 0;
     font-size: 16px;
     scroll-behavior: smooth;
-    /* width: ; */
+    
 }
 a{
     text-decoration: none;
+}
+.preload{
+    width: 100%;
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #77b3d4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+    transition: all 0.5s ease;
+    /* margin: 0; */
+}
+#preloadImg{
+    height: 50px;
+    animation: preload 2s ease  infinite alternate ;
+}
+.preload-finish{
+    opacity: 0;
+    pointer-events: none;
+}
+@keyframes preload{
+  10%{
+    transform: translateX(0px);
+  }
+  50%{
+    transform: translateX(-50px);
+  }
+  to{ 
+    transform: translateX(50px);
+  }
 }
 header{
     display: flex;
@@ -30,8 +66,9 @@ header{
     top: 0;
     left: 0;
     right: 0;
-    z-index: 5;
+    z-index: 2;
     background-color: #fff;
+    width: 100%;
 }
 
 .logo{
@@ -51,29 +88,28 @@ main{
     
     display: flex;
     /* margin: 40px 50px 0; */
-    justify-content: space-between;
-    align-items:center;
+    /* justify-content: space-between; */
+    /* align-items:center; */
     color: #1A3967;
-    /* width: 90%; */
+    /* gap: 1rem; */
+    /* width: 100%; */
+    /* height: 5%; */
     
 }
 .mainContent >h2{
     font-size: 1.5rem;
 }
-.mainContent >p{
-    /* margin: 10px ; */
-}
+
 .mainContent{
-    width:100% ;
-    height: 300px;
-    /* display: flex;
-    flex-direction: column; */
+    /* width:30% ; */
+    /* height: 400px; */
     
 }
 .mainImage{
  width: 50vw;
- /* height: 100%; */
- /* padding-right: 0; */
+ /* width: 100%; */
+ /* height: auto; */
+ 
 }
 .learn{
     background: #D6A419;
@@ -112,9 +148,10 @@ main{
     border: 1px solid #D1D7E1;
     width: 100%;
     height: fit-content;
+
 }
-.trusted >div{
-    font-size: 1.5rem;
+.trusted >h3{
+    font-size: 1.2rem;
     font-weight: bolder;
     color: #1A3967;
     transform: translate(20px,10px);
@@ -124,11 +161,8 @@ main{
     align-items: center;
     justify-content: center;
     flex-flow:row wrap;
-    gap: 1rem;
-    /* justify-content: space-between; */
-    /* display: grid;
-    grid-template-columns: repeat(5,1fr);
-    align-items: center; */
+    gap: 10px;
+
 }
 #trustedImg li img{
     /* height: 1em; */
@@ -139,15 +173,13 @@ main{
     border-radius: 20px;
     border: 1px solid black;
     width: 100%;
-    /* height: 400px; */
-    /* margin: 10px auto; */
+  
     position: relative;
     /* padding: 15px 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
-    /* padding: 10px 10px; */
+   
     align-content: center;
     justify-items: center;
     
@@ -164,6 +196,7 @@ main{
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
+    width: 100%;
     /* font-size: 12px; */
     /* align-items: center; */
 
@@ -320,6 +353,7 @@ main{
 }
 .detailsForm{
     display: flex;
+    flex-flow: wrap;
     gap: 10px;
     padding: 10px 0;
 }
@@ -343,6 +377,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-flow: wrap;
     color: #fff;
 }
 .security >div h3{
@@ -362,6 +397,7 @@ main{
 footer{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     /* align-items: center; */
     margin-top: 30px;
 }
@@ -433,7 +469,7 @@ footer{
     }
     /*Compliance card*/
     .card img{
-       
+        /* width: 200px; */
         box-shadow: -8px -5px 4px 5px  #EAF2F9;
         margin: 10px 0 0 10px;    
      } 
@@ -442,13 +478,8 @@ footer{
         
     }
     /*number label*/
-    #formData> #numberLabel{
-        display: none;
-        /* transform: translateX(60px); */
-    }
-    #formData >#numberLabelmobile{
-        display: block;
-    }
+    
+    
     /*form Button*/
     #formButton{
         width: 250px;
@@ -482,14 +513,14 @@ footer{
     .solutionDetails{
         display: flex;
         flex-direction: column;
-        /* align-items: center; */
-        /* align-content: center; */
-        /* justify-content: center; */
-        /* justify-items: center; */
-        
-    
     }
-    
+    /*trusted*/
+    .trusted >h3{
+        font-size: 0.5rem;
+        font-weight: bold;
+        color: #1A3967;
+        transform: translate(10px,5px);
+    }
 }
 
 
