--- a/Inedx.css
+++ b/Inedx.css
@@ -14,6 +14,7 @@ html{
     margin: 0 5vw 0;
     font-size: 16px;
     scroll-behavior: smooth;
+
     
 }
 a{
@@ -33,7 +34,7 @@ a{
     align-items: center;
     color: white;
     font-size: 25px;
-    transition: all 0.5s ease;
+    transition-property: opacity;
     /* margin: 0; */
 }
 #preloadImg{
